# JVMG

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
jvmg/: CMakeLists.txt  Switch.java  main.cpp
jvmg/examples/: CMakeLists.txt  javap.cpp
jvmg/include/jvmg/: jvmg.h  reader.h
jvmg/include/jvmg/IR/: attribute.h  classfile.h  instruction.h  operand.h  type.h  value.h
jvmg/include/jvmg/IR/ConstantPool/: constantPoolInfo.h
jvmg/include/jvmg/bytecode/: parser.h  reader.h
jvmg/include/jvmg/bytecode/parser/: parser.h
jvmg/include/jvmg/codegen/: codegen.h
jvmg/include/jvmg/parser/: parser.h
jvmg/include/jvmg/util/: util.h
jvmg/src/: CMakeLists.txt  jvmg.cpp
jvmg/src/IR/: CMakeLists.txt  attribute.cpp  classfile.cpp  instruction.cpp  operand.cpp  type.cpp
jvmg/src/IR/ConstantPool/: CMakeLists.txt  ConstUTF8.cpp  constantPoolInfo.cpp
jvmg/src/bytecode/: parser.cpp
jvmg/src/bytecode/parser/: codeParser.cpp  parser.cpp
jvmg/src/parser/: CMakeLists.txt  codeParser.cpp  parser.cpp
jvmg/src/util/: CMakeLists.txt  util.cpp
jvmg/test/: CMakeLists.txt  test.cpp
jvmg/tests/: test.cpp
